--- a/style.css
+++ b/style.css
@@ -279,3 +279,24 @@ nav a:hover {
 .variacao.negativa {
   color: red;
 }
+.social-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.icon-social {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  box-shadow: 0 0 5px #666;
+  transition: transform 0.3s ease;
+}
+
+.icon-social:hover {
+  transform: scale(1.1);
+}
