--- a/style.css
+++ b/style.css
@@ -441,3 +441,20 @@ nav a:hover {
   max-width: 800px;
   margin: 0 auto 60px auto;
 }
+.secao-imagem {
+  text-align: center;
+  margin: 40px auto;
+  padding: 20px;
+}
+
+.secao-imagem h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #0A621C;
+}
+
+.imagem-ilustrativa {
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);}
