--- a/style.css
+++ b/style.css
@@ -165,12 +165,12 @@ nav a:hover {
 #feed-agro {
   display: flex;
   gap: 30px;
-  justify-content: space-between;
+ justify-content: center; /* era space-between */
   flex-wrap: wrap;
 }
 
 .noticia-card {
-  flex: 1 1 30%;
+  flex: 1 1 300%;
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 8px;
@@ -459,35 +459,7 @@ nav a:hover {
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);}
 
-  #clima {
-  padding: 30px;
-  background-color: #f0f8ff;
-  color: #0A621C;
-  font-family: Arial, sans-serif;
-  border-top: 3px solid #0A621C;
-  border-bottom: 3px solid #0A621C;
-}
 
-#clima h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.clima-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
-
-.clima-item {
-  background-color: #ffffff;
-  border: 1px solid #0A621C;
-  border-radius: 10px;
-  padding: 15px;
-  box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
-  text-align: center;
-  font-size: 16px;
-}
 #clima {
   padding: 20px;
   background-color: #f0f8ff;
@@ -567,4 +539,7 @@ nav a:hover {
 .noticia-card p {
   font-size: 14px;
   color: #333;
+}
+html {
+  scroll-behavior: smooth;
 }
